--- a/style.css
+++ b/style.css
@@ -95,6 +95,20 @@ font-size: 50px;
     box-shadow: 5px 5px crimson;
 }
 
+/*homepage*/
+
+
+.homepage .conan{
+    position: relative;
+    left: 260px;
+    bottom: 75px;
+}
+
+.homepage .kaito{
+    position: relative;
+    right: 50%;
+    bottom: 120%;
+}
 
 /*image cropping and grid view*/
 
